# ctcx

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-bug.yml  02-feature.yml  config.yml
.github/workflows/: ci.yml
skills/ctcx-context/: SKILL.md
skills/ctcx-context/agents/: openai.yaml
skills/ctcx-context/references/: ctcx-schema.md
skills/ctcx-context/scripts/: inspect_context.py
src/: compiler.rs  insights.rs  lib.rs  main.rs  model.rs
tests/: cli.rs  compiler.rs
