[package]
name = "ctcx"
version = "0.1.0"
edition = "2024"
description = "Compile structured YAML instructions into agent context files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/benkleyner/ctcx"
homepage = "https://github.com/benkleyner/ctcx"
readme = "README.md"
keywords = ["agents", "cli", "context", "developer-tools", "yaml"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
sha2 = "0.10"
similar = "2.7"
tempfile = "3.23"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
